# MyApp-backend

./: .gitignore  README.md  Setup.md  application.py  deploy.sh  main.py  manage.py  populate_db.py  pyproject.toml  requirements.txt  resourcesFields.py  test.py
migrations/versions/: 0953d8302f4e_fix_typo.py  1dbd4f66725a_friend_requests.py  37428f2247bc_add_multimedia_type.py  37bcc17cad7d_add_profile_picture.py  437b35639fb8_friends.py  86143f568fae_.py  9959fed5e64f_initial_migration.py  a458682bd01f_.py  c201135c1266_initial_migration.py  eca651962875_add_battery_level.py
models/: FriendRequestModel.py  GroupChatModel.py  MessageModel.py  MultimediaModel.py  UserModel.py
resources/: FriendRequestResources.py  GroupChatResources.py  MessageResources.py  MultimediaResources.py  UserResources.py
