[tool.poetry]
name = "myapp-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.3"
flask-restful = "^0.3.10"
requests = "^2.31.0"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.0"
flask-cors = "^4.0.0"
flask-httpauth = "^4.8.0"
pyjwt = "^2.8.0"
flask-migrate = "^4.0.5"
boto3 = "^1.28.68"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
